--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "dotenv": "^6.2.0",
     "express": "^4.16.3",
+    "fetch": "^1.1.0",
     "if-env": "^1.0.4",
     "mongodb": "^3.1.11",
     "mongoose": "^5.4.4"
