--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.3",
-    "fetch": "^1.1.0",
     "if-env": "^1.0.4",
     "mongodb": "^3.1.11",
     "mongoose": "^5.4.4"
